<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_detail_scene"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/alDetailAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tDetailAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Game Details" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivLargeDetail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alDetailAct"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivSmallDetail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:alpha="1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivLargeDetail"
        app:layout_constraintTop_toBottomOf="@+id/alDetailAct"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLargeDetail" />

    <TextView
        android:id="@+id/tvRdDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvDetailTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle" />

    <TextView
        android:id="@+id/tvDetailRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRdDetail"
        app:layout_constraintStart_toEndOf="@+id/tvRdDetail"
        app:layout_constraintTop_toTopOf="@+id/tvRdDetail" />

    <TextView
        android:id="@+id/tvDetailRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivRatingIcon"
        app:layout_constraintStart_toEndOf="@+id/ivRatingIcon"
        app:layout_constraintTop_toTopOf="@+id/ivRatingIcon" />

    <TextView
        android:id="@+id/tvRatingDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailRating"
        app:layout_constraintStart_toEndOf="@+id/tvDetailRating"
        app:layout_constraintTop_toTopOf="@+id/tvDetailRating" />

    <ImageView
        android:id="@+id/ivRatingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_star"
        app:layout_constraintStart_toStartOf="@+id/tvRdDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvRdDetail"
        app:srcCompat="@drawable/ic_star"
        app:tint="@color/yellow" />

    <TextView
        android:id="@+id/tvDetailDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRatingIcon" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailDesc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetailDesctData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>